Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56764

Qt does not build with recent Khronos headers

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.3
    • 5.6, 5.7, 5.8
    • GUI: OpenGL
    • None
    • e8364f9a4b481207ba6822827e143fb31eccfe51

      First noticed (and partially corrected) with ANGLE, the issue is now rolling out with Mesa as well. See https://lists.freedesktop.org/archives/mesa-dev/2016-September/128654.html

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes