config.tests/unix/opengldesktop/opengldesktop.cpp
@@ -34,6 +34,7 @@
 #ifdef __APPLE__
 #include <OpenGL/gl.h>
 #else
+#define GL_GLEXT_PROTOTYPES
 #include <GL/gl.h>
 #endif
 
